Colab を使用して作成されました

--- a/Piano_transcription_inference_JP.ipynb
+++ b/Piano_transcription_inference_JP.ipynb
@@ -68,7 +68,7 @@
       "source": [
         "#@title ##**②音声ファイルを読み込む** { display-mode: \"form\" }\n",
         "#@markdown mid化したい音声のURLを貼ろう！(YouTube,Twitterなど)\n",
-        "source_url = 'https://youtu.be/lX1M-XXxdzo?si=S3kWVQPjxg1ZnD41' #@param {type:\"string\"}\n",
+        "source_url = 'https://youtu.be/QfCvx8TTXD0?si=u_CYe6pyyqXkeCs1' #@param {type:\"string\"}\n",
         "#@markdown 空欄のまま実行するとPCからファイルを読み込めます※mp3ファイルでアップロードしてください\n",
         "\n",
         "if source_url == '':\n",
@@ -110,7 +110,7 @@
       "source": [
         "#@title ##**③出力するファイルの名前を書いてね** { display-mode: \"form\" }\n",
         "#@markdown ※拡張子を書く必要はありません\n",
-        "output_midi_path = 'irisout' #@param {type:\"string\"}\n",
+        "output_midi_path = 'flow' #@param {type:\"string\"}\n",
         "from piano_transcription_inference import PianoTranscription, sample_rate, load_audio\n",
         "\n",
         "def transcribe(audio_path, output_midi_path):\n",
